feat(Message):
KimGUI -> refactor l.104 '...get(0)...'
to '...getFirst()...'

DiscussionTree discovered,
jsonMainReader needs to add start Point to List<Discussion>